--- a/dating-app-web-panel/src/App.css
+++ b/dating-app-web-panel/src/App.css
@@ -4,3 +4,10 @@
 main{
     flex-grow: 1;
 }
+.Root {
+    width: 100%;
+    z-index: 1;
+    display: flex;
+    overflow: hidden;
+    position: relative;
+}
